--- a/pom.xml
+++ b/pom.xml
@@ -4,26 +4,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
 		http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>clinic.programmming</groupId>
+  <groupId>clinic.programming</groupId>
   <artifactId>maven-quick-start</artifactId>
-  <version>1.1</version>
+  <version>1.8</version>
   
- <dependencies>
-	<dependency>
-		<groupId>org.apache.commons</groupId>
-		<artifactId>commons-lang3</artifactId>
-		<version>3.11</version>
-	</dependency>
-	
-	<dependency>
-		<groupId>junit</groupId>
-		<artifactId>junit</artifactId>
-		<version>4.13</version>
-		<scope>test</scope>
-	</dependency>
- </dependencies>
-
-    <build>
+  <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -36,4 +21,18 @@
       </plugin>
     </plugins>
   </build>
+  
+ <dependencies>
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-lang3</artifactId>
+		<version>3.11</version>
+	</dependency>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.13</version>
+		<scope>test</scope>
+	</dependency>
+ </dependencies>
 </project>
